[package]
name = "packet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16"}
flate2 = "1.0.28"
git2 = "0.18.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = "1.0.111"
tar = "0.4.40"
toml = "0.8.8"
