[package]
name = "packet"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "packet"

[lib]
name = "packet"
path = "src/packet/lib.rs"

[dependencies]
clap = { version = "4.4.16"}
git2 = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.10"
